--- a/.github/workflows/clouddriver-oes.yml
+++ b/.github/workflows/clouddriver-oes.yml
@@ -50,6 +50,10 @@ jobs:
           sed  -e 's/NEXUS_PASSWORD/${{ secrets.NEXUS_PASSWORD }}/' -i settings.gradle
           sed  -e 's/NEXUS_USERNAME/${{ secrets.NEXUS_USERNAME }}/' -i build.gradle
           sed  -e 's/NEXUS_PASSWORD/${{ secrets.NEXUS_PASSWORD }}/' -i build.gradle
+          
+          sed  's/^korkVersion=.*/korkVersion=OES-1.30.1-nov-cve-SNAPSHOT/; s/^fiatVersion=.*/fiatVersion=OES-1.30.1-nov-cve-SNAPSHOT/' gradle.properties > gradle.properties-bkp
+
+           mv gradle.properties-bkp gradle.properties
      
            ./gradlew --no-daemon -PenableCrossCompilerPlugin=true clouddriver-web:installDist -x test 
           
