--- a/clouddriver-azure/clouddriver-azure.gradle
+++ b/clouddriver-azure/clouddriver-azure.gradle
@@ -19,7 +19,7 @@ dependencies {
   implementation("io.projectreactor:reactor-core:3.4.23") {
     force = true
   }
-  implementation "com.google.guava:guava:31.1-jre"
+  implementation "com.google.guava:guava"
   implementation "org.apache.groovy:groovy"
 
   testImplementation "cglib:cglib-nodep:3.3.0"
