--- a/clouddriver-web/config/clouddriver.yml
+++ b/clouddriver-web/config/clouddriver.yml
@@ -374,7 +374,7 @@ redis:
   connection: ${services.redisRo.baseUrl:${services.redis.baseUrl}}
 
 caching:
-  writeEnabled: false
+  writeEnabled: true
 
 ---
 # This profile is used in HA deployments for a clouddriver that handles mutating requests from
@@ -386,4 +386,4 @@ spring:
         on-profile: rw
 
 caching:
-  writeEnabled: false
+  writeEnabled: true
