--- a/clouddriver-kubernetes/clouddriver-kubernetes.gradle
+++ b/clouddriver-kubernetes/clouddriver-kubernetes.gradle
@@ -118,7 +118,7 @@ dependencies {
   integrationImplementation "org.testcontainers:testcontainers"
   integrationImplementation "org.testcontainers:mysql"
   integrationImplementation "org.testcontainers:junit-jupiter"
-  integrationImplementation "mysql:mysql-connector-java"
+  integrationImplementation "com.mysql:mysql-connector-j"
   integrationImplementation ("io.rest-assured:rest-assured:4.0.0")
   integrationImplementation "org.yaml:snakeyaml"
 }
