--- a/clouddriver-web/clouddriver-web.gradle
+++ b/clouddriver-web/clouddriver-web.gradle
@@ -34,6 +34,7 @@ dependencies {
   implementation "io.spinnaker.kork:kork-web"
   implementation("io.spinnaker.kork:kork-plugins")
   implementation "io.spinnaker.kork:kork-moniker"
+  implementation "io.spinnaker.kork:kork-swagger"
   implementation "commons-io:commons-io"
   implementation "io.reactivex.rxjava3:rxjava:3.1.6"
   implementation "io.swagger:swagger-annotations:1.5.20"
