--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
-fiatVersion=1-0-SNAPSHOT
-korkVersion=1.33.3-nemesis-SNAPSHOT
+fiatVersion=1.33.0-SNAPSHOT
+korkVersion=1.33.0-SNAPSHOT
 org.gradle.parallel=true
 spinnakerGradleVersion=1-0-SNAPSHOT
-#targetJava11=true
 kotlinVersion=1.9.21
 
 # To enable a composite reference to a project, set the
