--- a/docker/ubi8/Dockerfile-dev
+++ b/docker/ubi8/Dockerfile-dev
@@ -110,6 +110,7 @@ RUN chmod -R 777 /etc/pki/tls/certs
 RUN chmod -R 777 /var/
 RUN chown -R spinnaker:spinnaker /var
 USER spinnaker
+HEALTHCHECK CMD curl --fail http://localhost:7002/health
 ENV SLEEP_TIME=10s
 CMD  sleep $SLEEP_TIME ; "/opt/clouddriver/bin/clouddriver"
 #CMD  sleep 180s ; "/opt/clouddriver/bin/clouddriver"
