--- a/docker/ubi8/Dockerfile-fips
+++ b/docker/ubi8/Dockerfile-fips
@@ -108,5 +108,6 @@ RUN chmod -R 777 /etc/pki/tls/certs
 RUN chmod -R 777 /var/
 RUN chown -R spinnaker:spinnaker /var
 USER spinnaker
+HEALTHCHECK CMD curl --fail http://localhost:7002/health
 ENV SLEEP_TIME=10s
 CMD  sleep $SLEEP_TIME ; "/opt/clouddriver/bin/clouddriver"
