--- a/clouddriver-web/config/clouddriver.yml
+++ b/clouddriver-web/config/clouddriver.yml
@@ -12,7 +12,7 @@ redis:
 
 services:
   front50:
-    baseUrl: http://localhost:8080
+    baseUrl: http://spin-front50:8080
 
 management.health.elasticsearch.enabled: false
 
