OP-22459 Commented the aws config as it is picking up from this yml and the clouddriver deployment is failing.

--- a/clouddriver-web/config/clouddriver.yml
+++ b/clouddriver-web/config/clouddriver.yml
@@ -52,8 +52,8 @@ default:
   account:
     env: default
 
-aws:
-  enabled: ${AWS_ENABLED:false}
+#aws:
+  #enabled: ${AWS_ENABLED:false}
 #  features:
 #    launch-templates:
 #      enabled: true
